# DictNavi

./: .gitignore  BUILD-MACOS.md  BUILD.md  Cargo.toml  README.md  build-and-package.bat  build-macos.sh  build.bat  build.txt  package-macos.sh  package.bat
.github/workflows/: build-all.yml  build-macos.yml
src/: dictionary.rs  gui.rs  lib.rs  main.rs  models.rs
words/.index/: .managed.json  meta.json
