[package]
name = "DictNavi"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui = "0.27"
eframe = "0.27"
tokio = { version = "1.0", features = ["full"] }
tantivy = "0.22"

# 发布版本优化配置
[profile.release]
opt-level = 3          # 最高优化级别
strip = true           # 移除符号表，减小文件体积
lto = true             # 链接时优化，减小体积并提升性能
codegen-units = 1      # 更好的优化（编译时间更长）
